# vertex_ai_test

./: pyproject.toml  vertex.ipynb
