[tool.poetry]
name = "vertexaitest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.17"
langchain-community = "^0.0.36"
langchain-google-vertexai = "^1.0.3"
vertexai = "^1.49.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
